--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; https://docs.google.com/presentation/d/e/2PACX-1vRB2IGRzTFS-XLuT-QKe5AaXY_uxN_50KMWcMF6UQhuPbxwj4vHeX6F7Quqp8sgE9Xnaqsd1pyEG6qB/pub?start=true&loop=true&delayms=5000 />
+<meta http-equiv="refresh" content="0; URL='https://docs.google.com/presentation/d/e/2PACX-1vRB2IGRzTFS-XLuT-QKe5AaXY_uxN_50KMWcMF6UQhuPbxwj4vHeX6F7Quqp8sgE9Xnaqsd1pyEG6qB/pub?start=true&loop=true&delayms=5000'" />
