--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; URL='https://docs.google.com/presentation/d/e/2PACX-1vTwyoZ8tkwrVrEl6iKSZZJHoe9swlWsfgTbeFh6PFsNlSxL2hK7fZfIJEJBpY2E45X2dwNkIQkBQqKi/pub?start=false&loop=false&delayms=5000'" />
+<meta http-equiv="refresh" content="0; URL='https://docs.google.com/presentation/d/e/2PACX-1vTwyoZ8tkwrVrEl6iKSZZJHoe9swlWsfgTbeFh6PFsNlSxL2hK7fZfIJEJBpY2E45X2dwNkIQkBQqKi/pub?start=true&loop=true&delayms=5000'" />
